syntax = "proto3";

package pb;


message User {
 string id    = 1;
 string name  = 2;
 string email = 3;
}


//The Users service definition.
service Users {
 rpc List   (ListRequest  ) returns (ListReply  );
 rpc Get    (GetRequest   ) returns (GetReply   );
 rpc Create (CreateRequest) returns (CreateReply);
 rpc Delete (DeleteRequest) returns (DeleteReply);
}

message ListRequest {}

message ListReply {
 repeated User users = 1;
}

message GetRequest {
 string id = 1;
}

message GetReply {
 User user = 1;
}

message CreateRequest {
 User user = 1;
}

message CreateReply {}

message DeleteRequest {
 string id = 1;
}

message DeleteReply {}

